--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,9 @@
   
   <modelVersion>4.0.0</modelVersion>
   
-  <groupId>MockitoStocks</groupId>
-  <artifactId>MockitoStocks</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <groupId>AgileStocks</groupId>
+  <artifactId>AgileStocks</artifactId>
+  <version>0.0.2</version>
   <name>MockitoStocks</name>
   <description>stock service with mockito</description>
   
