--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,6 @@
 	  	<artifactId>mockito-all</artifactId> 
 	  	<version>1.10.19</version> 
 	  </dependency>
-	  	  
 	  <dependency>
 	  	<groupId>junit</groupId>
 	  	<artifactId>junit</artifactId>
@@ -30,6 +29,21 @@
    		<groupId>javax.ws.rs</groupId>
    		<artifactId>javax.ws.rs-api</artifactId>
    		<version>2.0</version>
+	  </dependency>
+	  <dependency>
+   		<groupId>javax.json</groupId>
+   		<artifactId>javax.json-api</artifactId>
+   		<version>1.0</version>
+	  </dependency>
+	  <dependency>
+		<groupId>org.glassfish</groupId>
+ 		<artifactId>javax.json</artifactId>
+ 		<version>1.0.4</version>
+	  </dependency>
+	  <dependency>
+  		<groupId>org.lightcouch</groupId>
+ 		<artifactId>lightcouch</artifactId>
+  		<version>0.1.8</version>
 	  </dependency>
   </dependencies>
   
